2012-11-05  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.0.1 Released.

	* Fix a bug which made ConfBridge not record conferences when the
	  record command was initiated from AMI/CLI commands

	  (closes issue ASTERISK-20601)
	  Reported by: Vilius

	* Fix a bug causing SIP reloads to remove all entries from the registry

	  (closes issue ASTERISK-20611)
	  Reported by: Alisher

	* Fix an issue with res_http_websocket where the chan_sip WebSocket
	  handler could not be registered.

	  On some systems the optional API support uses the GCC compiler
	  attribute "weakref" to provide its functionality. This code changes
	  the function names and prefixes "__" to the front. The
	  res_http_websocket exports file did not take this into account,
	  thereby not allowing those functions to be global and ultimately
	  found.

	  (closes issue ASTERISK-20631)
	  Reported by: danjenkins

2012-10-25  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.0.0 Released.

2012-10-17  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.0.0-rc2 Released.

	* [r374792] Fix segfault regression from r370681

	  Due to usage of ast_hook_send_action, AMI action handling code should
	  be able to handle a NULL mansession->session.  This would cause a
	  crash	on NULL dereference if action_originate was called from
	  ast_hook_send_action.

  	  (closes issue ASTERISK-20544)

	* [r374842] Don't make chan_sip export global symbols.

	  During testing, it was discovered that having chan_sip export global
	  symbols was problematic.

	  The biggest problem was that load order was affected.
	  Trying to use realtime could be problematic since in
	  all likelihood the necessary realtime driver(s) would
	  not be loaded before chan_sip.

	  In addition, it was found that it was impossible to
	  use the Digium Phone Module for Asterisk since it
	  must be loaded before chan_sip since it must hook
	  into chan_sip's configuration parsing.
